try to fix failed example

--- a/.github/workflows/index.yaml
+++ b/.github/workflows/index.yaml
@@ -55,19 +55,19 @@ jobs:
         if: ${{ env.TAG_EXISTS != 'true' }}
         uses: actions/setup-go@0c52d547c9bc32b1aa3301fd7a9cb496313a4491 #v5.0.0
         with:
-          go-version-file: 'go.mod'
+          go-version-file: './tmp/terraform-provider-null/go.mod'
       
       - name: Install gophon
         if: ${{ env.TAG_EXISTS != 'true' }}
         run: go install github.com/lonegunmanb/gophon@latest
       
-      - name: Checkout terraform-provider-azurerm
+      - name: Checkout terraform-provider-null
         if: ${{ env.TAG_EXISTS != 'true' }}
         uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac #v4.0.0
         with:
           repository: hashicorp/terraform-provider-null
           ref: ${{ env.VERSION }}
-          path: /tmp/terraform-provider-null
+          path: ./tmp/terraform-provider-null
       
       - name: Clean previous index files
         if: ${{ env.TAG_EXISTS != 'true' }}
@@ -77,7 +77,7 @@ jobs:
         if: ${{ env.TAG_EXISTS != 'true' }}
         run: |
           WORKSPACE_DIR=$(pwd)
-          cd /tmp/terraform-provider-null
+          cd ./tmp/terraform-provider-null
           gophon -pkg=internal -base=github.com/hashicorp/terraform-provider-null -dest=$WORKSPACE_DIR/index
       
       - name: Commit and push index files
