--- a/.github/workflows/index.yaml
+++ b/.github/workflows/index.yaml
@@ -55,7 +55,7 @@ jobs:
         if: ${{ env.TAG_EXISTS != 'true' }}
         uses: actions/setup-go@0c52d547c9bc32b1aa3301fd7a9cb496313a4491 #v5.0.0
         with:
-          go-version-file: './tmp/terraform-provider-null/go.mod'
+          go-version-file: 'go.mod'
       
       - name: Install gophon
         if: ${{ env.TAG_EXISTS != 'true' }}
