Update GitHub Actions workflow and project configuration
- Update workflow to target terraform-provider-azurerm instead of terraform-provider-null
- Add .idea/ and tmp/ to .gitignore for IDE files and temporary directories
- Add testify dependency to go.mod for AST parser test framework
- Fix gophon command path in workflow to use relative path ../index

--- a/.github/workflows/index.yaml
+++ b/.github/workflows/index.yaml
@@ -30,7 +30,7 @@ jobs:
             echo "Using manually provided version: $latest"
           else
             # Fetch latest version from repository
-            latest=$(gh api repos/hashicorp/terraform-provider-null/tags |\
+            latest=$(gh api repos/hashicorp/terraform-provider-azurerm/tags |\
             jq -r '.[].name' | \
             grep -E '^[vV]?[0-9]+\.[0-9]+\.[0-9]+$' | \
             sort -V | \
@@ -61,13 +61,13 @@ jobs:
         if: ${{ env.TAG_EXISTS != 'true' }}
         run: go install github.com/lonegunmanb/gophon@latest
       
-      - name: Checkout terraform-provider-null
+      - name: Checkout terraform-provider-azurerm
         if: ${{ env.TAG_EXISTS != 'true' }}
         uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac #v4.0.0
         with:
-          repository: hashicorp/terraform-provider-null
+          repository: hashicorp/terraform-provider-azurerm
           ref: ${{ env.VERSION }}
-          path: ./tmp/terraform-provider-null
+          path: ./tmp/terraform-provider-azurerm
       
       - name: Clean previous index files
         if: ${{ env.TAG_EXISTS != 'true' }}
@@ -76,9 +76,8 @@ jobs:
       - name: Generate gophon index
         if: ${{ env.TAG_EXISTS != 'true' }}
         run: |
-          WORKSPACE_DIR=$(pwd)
-          cd ./tmp/terraform-provider-null
-          gophon -pkg=internal -base=github.com/hashicorp/terraform-provider-null -dest=$WORKSPACE_DIR/index
+          cd ./tmp/terraform-provider-azurerm
+          gophon -pkg=internal -base=github.com/hashicorp/terraform-provider-azurerm -dest=../index
       
       - name: Commit and push index files
         if: ${{ env.TAG_EXISTS != 'true' }}
