--- a/.github/workflows/index.yaml
+++ b/.github/workflows/index.yaml
@@ -7,8 +7,8 @@ on:
         description: 'Terraform AzureRM Provider version (e.g., v4.0.0). Leave empty to use latest.'
         required: false
         type: string
-#  schedule:
-#    - cron: '0 */6 * * *'
+  schedule:
+    - cron: '0 */6 * * *'
 
 permissions:
   contents: write
