--- a/.github/workflows/index.yaml
+++ b/.github/workflows/index.yaml
@@ -78,6 +78,8 @@ jobs:
       
       - name: Generate index
         if: ${{ env.TAG_EXISTS != 'true' }}
+        env:
+          GOPHON_CPU_LIMIT: "50"
         run: |
           cd ./tmp/terraform-provider-azurerm
           gophon -pkg=internal -base=github.com/hashicorp/terraform-provider-azurerm -dest=../../index
